fixing text alignment

--- a/base.css
+++ b/base.css
@@ -225,7 +225,7 @@ article{
     font-family: 'Julius Sans One', sans-serif;
     border: 1px solid white;
     width: 250px;
-    padding-left: 65px;
+    padding-left: 55px;
     padding-top: 150px;
 }
 
@@ -364,7 +364,7 @@ article{
     font-family: 'Julius Sans One', sans-serif;
     border: 1px solid white;
     width: 250px;
-    padding-left: 135px;
+    padding-left: 55px;
     padding-top: 150px;
 }
 
